# internet-lab-test-assignment

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: contact.py  health.py  metrics.py
app/core/: config.py  errors.py  logging.py  security.py
app/handlers/: ai_client.py  resend_client.py  smtp_client.py
app/repositories/: json_file.py  metrics_repository.py  outbox_repository.py  rate_limit_repository.py  submission_repository.py
app/schemas/: ai.py  contact.py  email.py  error.py  metrics.py
app/services/: ai_service.py  contact_service.py  email_service.py  metrics_service.py  rate_limit_service.py
app/templates/: owner_email.txt  user_email.txt
docs/: IMPLEMENTATION_PLAN.md  deployment.md
docs/adr/: 0001-use-fastapi-poetry-and-layered-architecture.md  0002-contact-workflow-ai-and-email-fallbacks.md  0003-use-json-file-storage-rate-limiting-and-metrics.md  0004-serve-angular-from-fastapi-and-deploy-with-docker-on-railway.md
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.scss  app.ts  contact-api.service.ts  contact.models.ts
tests/: test_ai_service.py  test_api_contracts.py  test_contact_workflow.py  test_email_service.py  test_frontend_serving.py  test_health.py  test_json_storage.py  test_metrics_api.py  test_rate_limit_service.py
